--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_withdrawal">Withdrawal</string>
+    <string name="title_activity_deposit">Deposit</string>
+    <string name="title_activity_transfer">Transfer</string>
 </resources>
