--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_deposit">Deposit</string>
     <string name="title_activity_transfer">Transfer</string>
     <string name="title_activity_login_screen">LoginScreen</string>
+    <string name="title_activity_transactions">Transactions</string>
 </resources>
